--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "tsc --project ./",
     "dev": "nodemon --config nodemon.json src/main.ts",
-    "prod": "node dist/main.js"
+    "prod": "node dist/main.js",
+    "lint:check": "eslint src/ --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+    "lint:fix": "prettier --write src/ && yarn lint:check --fix"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -19,11 +21,16 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
     "@types/pino": "^7.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "^5.1.3"
+    "typescript": "4.9"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
