--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "nodemon --config nodemon.json src/main.ts",
     "prod": "node dist/main.js",
     "lint:check": "eslint src/ --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
-    "lint:fix": "prettier --write src/ && yarn lint:check --fix"
+    "lint:fix": "prettier --write src/ && yarn lint:check --fix",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -27,6 +28,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
