--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
     "@types/pino": "^7.0.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
@@ -45,6 +47,8 @@
     "express-validator": "^7.0.1",
     "mongoose": "^7.2.4",
     "pino": "^8.14.1",
-    "pino-pretty": "^10.0.0"
+    "pino-pretty": "^10.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   }
 }
