--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "strict": true,
+    // "strict": true,
     "module": "ESNext",
     "types": ["node", "express", "mongoose", "swagger-jsdoc", "swagger-ui-express", "jest", "supertest"],
     "resolveJsonModule": true,
