--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.8",
     "@types/pino": "^7.0.5",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -49,14 +50,17 @@
   "dependencies": {
     "@types/jest": "^29.5.2",
     "@types/supertest": "^2.0.12",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dayjs": "^1.11.8",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
+    "mongoose-autopopulate": "^1.0.1",
+    "nodemailer": "^6.9.3",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.0",
     "swagger-jsdoc": "^6.2.8",
