--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@apidevtools/openapi-schemas": "^2.1.0",
+    "@apidevtools/swagger-parser": "^10.1.0",
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@types/bcrypt": "^5.0.0",
